`.comment-respond` should only have a border if there are comments on the post— prevents a double border

--- a/src/sass/site/primary/_comments.scss
+++ b/src/sass/site/primary/_comments.scss
@@ -1,5 +1,5 @@
 .comments-area,
-.comment-respond {
+.comment-list + .comment-respond {
 	border-top: 1px solid $color__border;
 }
 
